--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -11,7 +11,7 @@
           <img src="/Imagenes/agenda.png" alt="Proyecto 1" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
-          <h3 class="proyectos-section__card-title">Proyecto 1</h3>
+          <h3 class="proyectos-section__card-title">AgendaMB</h3>
           <p class="proyectos-section__card-text">Agenda personal con registro de usuarios. Permite agendar citas y gestionar tareas. Desarrollada con Angular, Node.js, MongoDB y Bootstrap</p>
         </div>
       </a>
@@ -20,7 +20,7 @@
           <img src="/Imagenes/tiendadeuñas.png" alt="Proyecto 2" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
-          <h3 class="proyectos-section__card-title">Proyecto 2</h3>
+          <h3 class="proyectos-section__card-title">Tienda de Uñas</h3>
           <p class="proyectos-section__card-text">Sitio web para escuela de manicura. Muestra cursos, talleres e insumos disponibles. Desarrollado únicamente con Angular y Bootstrap.</p>
         </div>
       </a>
@@ -29,7 +29,7 @@
           <img src="/Imagenes/psicologos.PNG" alt="Proyecto 3" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
-          <h3 class="proyectos-section__card-title">Proyecto 3</h3>
+          <h3 class="proyectos-section__card-title">Terapia JDG</h3>
           <p class="proyectos-section__card-text">Página web para psicólogos con terapias tradicionales y alternativas. Muestra los profesionales disponibles y permite contacto para sesiones online.</p>
         </div>
       </a>
@@ -38,7 +38,7 @@
           <img src="/Imagenes/inmobiliaria.png" alt="Proyecto 4" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
-          <h3 class="proyectos-section__card-title">Proyecto 4</h3>
+          <h3 class="proyectos-section__card-title">Consultora Mas</h3>
           <p class="proyectos-section__card-text">Sitio web de inmobiliaria que muestra propiedades disponibles para alquilar o vender. Presenta imágenes, descripciones y datos de contacto.</p>
         </div>
       </a>
